tests/expectations/compiler/finalize/read_write_mapping_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'identifier', found ':'
    --> compiler-test:26:53
     |
  26 |     async function finalize_write_in_finalize(public: addr: address, public amount: u128) {
     |                                                     ^"""]
